<resources>
    <string name="app_name">DaisyLing</string>

    <string name="login">登录</string>
    <string name="login_username_hint">账号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_empty_username">账号为空</string>
    <string name="login_empty_password">密码为空</string>

    <string name="home">首页</string>
    <string name="home_recommended_music">推荐歌单</string>
    <string name="home_popular_video">热门视频</string>
    <string name="home_music_title">So Many Pets</string>
    <string name="home_music_content">Mickey,minnie,Goofy</string>
    <string name="home_more">查看更多</string>
    <string name="home_no_history">没有历史记录</string>

    <string name="my">我的</string>
    <string name="my_username">EmilyWu</string>
    <string name="my_vip_edit">会员中心</string>
    <string name="my_download">本地/下载</string>
    <string name="my_favorite">收藏</string>
    <string name="my_history">我的足迹</string>
    <string name="my_play">最近播放</string>
    <string name="my_setting">设置</string>
    <string name="my_cache">清除缓存</string>
    <string name="my_app_version">版本信息</string>
    <string name="my_logout">退出登录</string>
    <string name="my_download_history_clear">清除下载记录</string>
    <string name="my_favorite_history_clear">清除收藏记录</string>
    <string name="my_history_clear">清除历史记录</string>
    <string name="my_play_history_clear">清除播放记录</string>
    <string name="my_cache_history_clear">清除缓存成功</string>
    <string name="my_cache_no_history">暂无缓存</string>
    <string name="my_app_version_name">V1.0.0版本</string>
    <string name="my_app_version_content">主要功能：首页，搜索，音视频列表，我的</string>
    <string name="my_app_date">发布日期：</string>
    <string name="my_app_date_content">2021-10-20</string>
    <string name="my_add">+</string>

    <string name="search">搜索</string>
    <string name="search_cancel">取消</string>
    <string name="search_no_history">暂无记录</string>
    <string name="search_empty">搜索为空</string>
    <string name="search_clear_history">清空搜索记录</string>

    <string name="common_music">歌单</string>
    <string name="common_video">视频</string>
    <string name="common_more">查看更多</string>
    <string name="common_bottom_text">没有更多数据了</string>

    <string name="music_name">歌单：</string>
    <string name="video_name">视频：</string>
    <string name="download">下载</string>
    <string name="favorite">收藏</string>
    <string name="share">分享</string>
    <string name="comment">评论</string>
    <string name="alert">投诉</string>
    <string name="delete">删除</string>
    <string name="download_success">已下载</string>
    <string name="favorite_success">已收藏</string>
    <string name="share_success">已分享</string>
    <string name="comment_success">已评论</string>
    <string name="play_control_mode_success">单曲循环</string>
    <string name="alert_success">已投诉</string>
    <string name="develop_tip">正在开发中</string>
    <string name="loading">正在加载中…</string>
    <string name="loading_finish">加载完成</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear">清空</string>
    <string name="clear_download_content">确定要删除下载记录吗？</string>
    <string name="clear_favorite_content">确定要清空收藏记录吗？</string>
    <string name="clear_play_content">确定要清空播放记录吗？</string>
    <string name="clear_cache_content">确定要清除缓存吗？</string>
    <string name="clear_cache_success">清除完毕</string>
    <string name="fail_to_insert">插入失败</string>
    <string name="app_version">V1.0.0</string>
    <string name="default_cache">0.00KB</string>
    <string name="logout_content">确定要退出登录吗？</string>

    <!-- 新增 -->
    <string name="lm_lyric">歌词页面，暂未开放</string>
    <string name="lm_songs_list_add_bt">添加歌单</string>
    <string name="lm_songs_my_list">我的歌单</string>
    <string name="lm_song_list_add_bt">添加歌曲</string>
    <string name="lm_songs_list_local">本地音乐</string>
    <string name="lm_songs_list_mark">收藏音乐</string>
    <string name="lm_songs_name">歌单名称</string>
    <string name="lm_no_item">暂无记录</string>

    <string name="lm_common_remind">提示</string>
    <string name="lm_common_measure">确定</string>
    <string name="lm_common_operate">操作</string>
    <string name="lm_common_candle">取消</string>
    <string name="lm_common_back">返回</string>
    <string name="lm_common_unknown_song">未知歌曲</string>
    <string name="lm_play_list">播放列表</string>
    <string name="lm_play_list_null">空空如也</string>
    <string name="lm_setting_searching">查找中</string>
    <string name="lm_setting_search_end">查找完成</string>
    <string name="lm_setting_find_song">扫描歌曲</string>
    <string name="lm_setting_about">关于</string>
    <string name="lm_setting_about_github_title">github:</string>
    <string name="lm_setting_about_github_value">https://github.com/wupeilinloveu</string>
    <string name="lm_setting_about_qq_title">QQ:</string>
    <string name="lm_setting_about_qq_value">2459336643</string>
    <string name="lm_main_exit_app_remind">真的要走吗？</string>
    <string name="lm_song_songs_operate_play">播放歌单</string>
    <string name="lm_song_songs_operate_delete">删除歌单</string>
    <string name="lm_song_songs_operate_edit">编辑歌单</string>
    <string name="lm_song_songs_operate_pre_play">添加到播放列表</string>
    <string name="lm_song_songs_operate_play_measure_message">确定替换当前播放列表？</string>
    <string name="lm_song_songs_operate_delete_measure_message">确定删除？</string>
    <string name="lm_song_song_operate_delete">删除</string>
    <string name="lm_song_song_operate_edit">编辑</string>
    <string name="lm_song_song_operate_pre_play">下一首播放</string>
    <string name="lm_song_song_operate_add_to_songs">添加到歌单</string>

    <string name="lm_song_song_edit_album_label">专辑</string>
    <string name="lm_song_song_edit_album_hint">请输入专辑名称</string>
    <string name="lm_song_song_edit_artist_label">歌手</string>
    <string name="lm_song_song_edit_artist_hint">请输入歌手名称</string>
    <string name="lm_song_song_edit_title_label">歌名</string>
    <string name="lm_song_song_edit_title_hint">请输入歌曲名称</string>
    <string name="lm_song_songs_edit_name_label">歌单名</string>
    <string name="lm_song_songs_edit_name_hint">请输入歌单名称</string>
    <!-- Main -->
    <string-array name="lm_main_titles">
        <item>首页</item>
        <item>歌单</item>
        <item>设置</item>
    </string-array>

</resources>