<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPage"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height54"
        android:background="@color/white"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/toolbar_height20"
            android:layout_height="@dimen/toolbar_height20"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/toolbarTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/my_app_version"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_textSize20"
            tools:ignore="SpUsage" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/bg_radius_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/my_app_version_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/my_app_version_content"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/tv_app_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_app_date"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/my_app_date_content"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>