<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPage"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.example.daisyling.ui.widget.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_my" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_my_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_username"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_my_vip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_radius_grey"
                android:padding="3dp"
                android:text="@string/my_vip_edit"
                android:textSize="11sp"
                tools:ignore="ContentDescription,SmallSp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_radius_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_my_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_download"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16"
            app:drawableTopCompat="@drawable/ic_download_focused"
            tools:ignore="RtlCompat" />


        <TextView
            android:id="@+id/tv_my_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_favorite"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16"
            app:drawableTopCompat="@drawable/ic_favorite_focused" />

        <TextView
            android:id="@+id/tv_my_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_play"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16"
            app:drawableTopCompat="@drawable/ic_play_focused" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_radius_white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_my_cache"
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:drawablePadding="3dp"
                android:text="@string/my_cache"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size16"
                app:drawableStartCompat="@drawable/ic_history_focused"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_cache" />

                <ImageView
                    android:layout_width="@dimen/icon_width16"
                    android:layout_height="@dimen/icon_height16"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrow_forward" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorView" />

        <RelativeLayout
            android:id="@+id/rl_my_app_version"
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:drawablePadding="3dp"
                android:text="@string/my_app_version"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size16"
                app:drawableStartCompat="@drawable/ic_app_version_focused"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version" />

                <ImageView
                    android:layout_width="@dimen/icon_width16"
                    android:layout_height="@dimen/icon_height16"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrow_forward" />
            </LinearLayout>
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorView" />

        <RelativeLayout
            android:id="@+id/rl_my_logout"
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:drawablePadding="3dp"
                android:text="@string/my_logout"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size16"
                app:drawableStartCompat="@drawable/ic_logout_focused"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="@dimen/icon_width16"
                android:layout_height="@dimen/icon_height16"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_arrow_forward" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>