<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPage"
    android:orientation="vertical"
    tools:context=".ui.activity.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height54"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/search_block"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height35"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/toolbar_height20"
                android:layout_height="@dimen/toolbar_height20"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_arrow_back" />

            <scut.carson_ho.searchview.EditText_Clear
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_search"
                android:drawablePadding="5dp"
                android:gravity="start|center_vertical"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="17sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <scut.carson_ho.searchview.SearchListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </scut.carson_ho.searchview.SearchListView>

                <TextView
                    android:id="@+id/tv_clear"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#F6F6F6"
                    android:gravity="center"
                    android:text="@string/search_clear_history"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_search_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/common_music"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_search_music_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/common_more"
                        android:textAlignment="textEnd"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_forward" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_search_music_no_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_no_history"
                    android:textSize="13sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_radius_white"
                android:divider="#FFFFFFFD"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_search_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/common_video"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_search_video_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/common_more"
                        android:textAlignment="textEnd"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_forward" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_search_video_no_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_search_video_no_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_no_history"
                    android:textSize="13sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_radius_white"
                android:divider="#FFFFFFFD"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:visibility="gone"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>